Bug 257249 - AX: AccessibilityARIAGridCell::parentTable() needlessly computes accessibilityIsIgnored
Summary: AX: AccessibilityARIAGridCell::parentTable() needlessly computes accessibilit...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tyler Wilcock
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-23 20:43 PDT by Tyler Wilcock
Modified: 2023-05-24 11:34 PDT (History)
10 users (show)

See Also:


Attachments
Patch (2.57 KB, patch)
2023-05-23 20:49 PDT, Tyler Wilcock
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler Wilcock 2023-05-23 20:43:55 PDT
AccessibilityARIAGridCell::parentTable() is very expensive because it repeatedly and needlessly computes accessibilityIsIgnored.
Comment 1 Radar WebKit Bug Importer 2023-05-23 20:44:05 PDT
<rdar://problem/109753927>
Comment 2 Tyler Wilcock 2023-05-23 20:49:07 PDT
Created attachment 466473 [details]
Patch
Comment 3 EWS 2023-05-24 11:34:25 PDT
Committed 264483@main (c9e4f6d7c684): <https://commits.webkit.org/264483@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 466473 [details].