AX: AccessibilityARIAGridCell::parentTable() needlessly computes accessibilityIsIgnored https://bugs.webkit.org/show_bug.cgi?id=257249 rdar://problem/109753927

Reviewed by Chris Fleizach.

AccessibilityARIAGridCell::parentTable() is currently implemented by
traversing its unignored ancestors and checking if each one is an
exposed-to-accessibility table. This is extremely inefficient because it
frontloads the expensive work (computing accessibilityIsIgnored) and
backloads the cheap work (is<AccessibilityTable>(ancestor), and is that table exposed).

This patch inverts those checks, navigating from ancestor to ancestor
(not considering ignored status), checking if each is a table that is
exposed. Only when both of these conditions are met do we compute
ignored status of the candidate table.

From a sample on Quip with 130k samples, this saves ~8k samples.

* Source/WebCore/accessibility/AccessibilityARIAGridCell.cpp:
(WebCore::AccessibilityARIAGridCell::parentTable const):

Canonical link: https://commits.webkit.org/264483@main